# xronometro

./: CMakeLists.txt  PKGBUILD  README.md
src/: main.cpp
